--- a/idmpotent-demo/pom.xml
+++ b/idmpotent-demo/pom.xml
@@ -23,10 +23,9 @@
 
         <dependency>
             <groupId>com.tbex</groupId>
-            <artifactId>idmpotent-core</artifactId>
+            <artifactId>idmpotent-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
 
     </dependencies>
 
